[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeroopt"
description = "A multi-objective optimization tool for engineering applications."
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [{ name = "aeroopt contributors" }]
keywords = ["optimization", "multi-objective", "evolutionary-algorithm", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.5"]

[project.urls]
Repository = "https://github.com/swayli94/AeroOpt"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "aeroopt.__version__" }

[tool.setuptools.package-data]
aeroopt = ["template_settings.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aeroopt*"]
